// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculator page renders Calculator correctly 1`] = `
<div
  className="calculator"
  data-testid="calculator"
>
  <div
    className="display"
  />
  <div
    className="keypad"
  >
    <button
      className="key"
      data-value="AC"
      onClick={[Function]}
      type="button"
    >
      AC
    </button>
    <button
      className="key"
      data-value="+/-"
      onClick={[Function]}
      type="button"
    >
      +/-
    </button>
    <button
      className="key"
      data-value="%"
      onClick={[Function]}
      type="button"
    >
      %
    </button>
    <button
      className="key color-button"
      data-value="÷"
      onClick={[Function]}
      type="button"
    >
      ÷
    </button>
    <button
      className="key"
      data-value="7"
      onClick={[Function]}
      type="button"
    >
      7
    </button>
    <button
      className="key"
      data-value="8"
      onClick={[Function]}
      type="button"
    >
      8
    </button>
    <button
      className="key"
      data-value="9"
      onClick={[Function]}
      type="button"
    >
      9
    </button>
    <button
      className="key color-button"
      data-value="x"
      onClick={[Function]}
      type="button"
    >
      x
    </button>
    <button
      className="key"
      data-value="4"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="key"
      data-value="5"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <button
      className="key"
      data-value="6"
      onClick={[Function]}
      type="button"
    >
      6
    </button>
    <button
      className="key color-button"
      data-value="-"
      onClick={[Function]}
      type="button"
    >
      -
    </button>
    <button
      className="key"
      data-value="1"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="key"
      data-value="2"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="key"
      data-value="3"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="key color-button"
      data-value="+"
      onClick={[Function]}
      type="button"
    >
      +
    </button>
    <button
      className="key double-size"
      data-value="0"
      onClick={[Function]}
      type="button"
    >
      0
    </button>
    <button
      className="key"
      data-value="."
      onClick={[Function]}
      type="button"
    >
      .
    </button>
    <button
      className="key color-button"
      data-value="="
      onClick={[Function]}
      type="button"
    >
      =
    </button>
  </div>
</div>
`;

exports[`Calculator page renders Calculator page correctly 1`] = `
<div
  className="main-container"
  style={
    Object {
      "display": "flex",
      "justifyContent": "space-between",
    }
  }
>
  <h2
    className="page-title"
  >
    Let's do some math!
  </h2>
  <div
    className="calculator"
    data-testid="calculator"
  >
    <div
      className="display"
    />
    <div
      className="keypad"
    >
      <button
        className="key"
        data-value="AC"
        onClick={[Function]}
        type="button"
      >
        AC
      </button>
      <button
        className="key"
        data-value="+/-"
        onClick={[Function]}
        type="button"
      >
        +/-
      </button>
      <button
        className="key"
        data-value="%"
        onClick={[Function]}
        type="button"
      >
        %
      </button>
      <button
        className="key color-button"
        data-value="÷"
        onClick={[Function]}
        type="button"
      >
        ÷
      </button>
      <button
        className="key"
        data-value="7"
        onClick={[Function]}
        type="button"
      >
        7
      </button>
      <button
        className="key"
        data-value="8"
        onClick={[Function]}
        type="button"
      >
        8
      </button>
      <button
        className="key"
        data-value="9"
        onClick={[Function]}
        type="button"
      >
        9
      </button>
      <button
        className="key color-button"
        data-value="x"
        onClick={[Function]}
        type="button"
      >
        x
      </button>
      <button
        className="key"
        data-value="4"
        onClick={[Function]}
        type="button"
      >
        4
      </button>
      <button
        className="key"
        data-value="5"
        onClick={[Function]}
        type="button"
      >
        5
      </button>
      <button
        className="key"
        data-value="6"
        onClick={[Function]}
        type="button"
      >
        6
      </button>
      <button
        className="key color-button"
        data-value="-"
        onClick={[Function]}
        type="button"
      >
        -
      </button>
      <button
        className="key"
        data-value="1"
        onClick={[Function]}
        type="button"
      >
        1
      </button>
      <button
        className="key"
        data-value="2"
        onClick={[Function]}
        type="button"
      >
        2
      </button>
      <button
        className="key"
        data-value="3"
        onClick={[Function]}
        type="button"
      >
        3
      </button>
      <button
        className="key color-button"
        data-value="+"
        onClick={[Function]}
        type="button"
      >
        +
      </button>
      <button
        className="key double-size"
        data-value="0"
        onClick={[Function]}
        type="button"
      >
        0
      </button>
      <button
        className="key"
        data-value="."
        onClick={[Function]}
        type="button"
      >
        .
      </button>
      <button
        className="key color-button"
        data-value="="
        onClick={[Function]}
        type="button"
      >
        =
      </button>
    </div>
  </div>
</div>
`;
